Fixed fullscreen behaviour on mobile.

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -119,6 +119,16 @@ body.mobile-landscape #demo-div:before {
 	display: block;
 	padding-top: 56.7%;
 }
+@media (max-width: 767px) {
+	body.desktop.video #demo-div iframe {
+		height: 82%;
+		left: 12.5%;
+		padding-top: 0%;
+		width: 72.4%;
+		top: 16px;
+	}
+}
+
 ////////////////////////////
 
 
